fix: cards alignments

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1087,3 +1087,8 @@ a {
 .fr-header__operator img {
   max-width: 9rem;
 }
+
+.fr-mx-auto {
+  margin-right: auto;
+  margin-left: auto;
+}
